--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             <div class="box">
               <span>02</span>
               <h4><a href="files/MANUAL%20INTEGRADO%20DEL%20GRUPO%20SESPEM%20%20.pdf" target="_blank"><fount>MANUAL INTEGRADO</fount></a></h4>
-              <p>Manual integrado del grupo SESPEM S.A.S.</p>
+              <p>Manual integrado de SESPEM S.A.S.</p>
             </div>
           </div>
 
@@ -636,7 +636,7 @@
             <div class="info-box mb-4">
               <i class="bx bx-map"></i>
               <h3>Nuestra direcciones</h3>
-               <p>Barranquilla, Cra 49 # 72 - 193 centro ejecutivo 74 oficina 8.</p>
+               <p>Barranquilla, Cra 49 # 72 - 193 Centro Ejecutivo 74 Oficina 8.</p>
                <p>Bogotá, Cra. 3a #57-84.</p>
               <p>Cartagena, Pie de la Popa, Cra 29C No. 19 - 43.</p>
               <p>Valledupar, Calle 16 #6-60, Centro.</p>
@@ -648,10 +648,10 @@
             <div class="info-box  mb-4">
               <i class="bx bx-envelope"></i>
               <h3>Email</h3>
-               <p>Barranquilla. rhumanos7@gruposespem.com</p>
-                 <p>Bogotá. rhumanosbta@gruposespem.com</p>
-              <p>Cartagenar. humanos3@gruposespem.com</p>      
-              <p>Valledupar. servicioalclientevpar@gruposespem.com</p>
+               <p>Barranquilla- rhumanos7@gruposespem.com</p>
+                 <p>Bogotá- rhumanosbta@gruposespem.com</p>
+              <p>Cartagena- humanos3@gruposespem.com</p>      
+              <p>Valledupar- servicioalclientevpar@gruposespem.com</p>
             </div>
           </div>
 
@@ -659,11 +659,11 @@
             <div class="info-box  mb-4">
               <i class="bx bx-phone-call"></i>
               <h3>Telefonos</h3>
-               <p>Barranquilla. 387 3813</p>
-               <p>Bogotá. 211 2006</p>
-              <p>Cartagena. 666 1689</p>
-              <p>Cartagena. 314 413 1771</p>
-              <p>valledupar. 580 5951</p>
+               <p>Barranquilla- 387 3813</p>
+               <p>Bogotá- 211 2006</p>
+              <p>Cartagena- 666 1689</p>
+              <p>Cartagena- 314 413 1771</p>
+              <p>valledupar- 580 5951</p>
             </div>
           </div>
 
@@ -722,9 +722,9 @@
                <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>
               <br><p>
                 <i class="icofont-check-circled"></i> Pie de la Popa, Carrera 29C No. 19 - 43, Cartagena, Bolívar. <br>
-                <i class="icofont-check-circled"></i> Cra. 3a #57-84, Bogotá. <br>
+                <i class="icofont-check-circled"></i> Cra. 3a #57-84, Bogotá D.C. <br>
                <i class="icofont-check-circled"></i>  Calle 16 #6-60, Centro, Valledupar, Cesar. <br>
-               <i class="icofont-check-circled"></i>  Cra 49 # 72 - 193 centro ejecutivo 74  oficina 8, Barranquilla, Atlantico.<br><br>
+               <i class="icofont-check-circled"></i>  Cra 49 # 72 - 193 Centro Ejecutivo 74  Oficina 8, Barranquilla, Atlantico.<br><br>
               </p>
               <div class="social-links mt-3">
                 <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
