--- a/index.html
+++ b/index.html
@@ -676,30 +676,12 @@
           </div>
           <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="form-row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="NOMBRE" data-rule="minlen:4" data-msg="Por favor introduzca un nombre" />
-                  <div class="validate"></div>
-                </div>
-                <div class="col-md-6 form-group">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="EMAIL" data-rule="email" data-msg="por favor introduzca un Email valido" />
-                  <div class="validate"></div>
-                </div>
+               <br>
+                <div class="text-center">  <h3>COMUNÍCATE CON NOSOTROS A TRAVÉS DE NUESTRO CHAT </h3> </div>
+                <br>
+               <div class="btn-wrap">
+                   <div class="text-center">  <a href="https://chat.integrally.com.co:8797/chat.html" class="btn btn-outline-warning">INGRESAR CHAT</a> </div>
               </div>
-              <div class="form-group">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="ASUNTO" data-rule="minlen:4" data-msg="por favor introduzca un asunto" />
-                <div class="validate"></div>
-              </div>
-              <div class="form-group">
-                <textarea class="form-control" name="message" rows="5" data-rule="required" data-msg="Por favor escriba un mensaje" placeholder="MENSAJE"></textarea>
-                <div class="validate"></div>
-              </div>
-              <div class="mb-3">
-                <div class="loading">Cargando</div>
-                <div class="error-message">A ocurrido un error</div>
-                <div class="sent-message">Su mensaje se a enviado. Gracias!</div>
-              </div>
-              <div class="text-center"><button type="submit">ENVIAR MENSAJE</button></div>
             </form>
           </div>
 
