--- a/index.html
+++ b/index.html
@@ -676,9 +676,11 @@
           </div>
           <div class="col-lg-6">
             <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                <div class="text-center"> <img src="assets/img/conversation_102339.png" class="img-fluid" alt="" width="100" height="100"> </div>
                <br>
-                <div class="text-center">  <h3>COMUNÍCATE CON NOSOTROS A TRAVÉS DE NUESTRO CHAT </h3> </div>
-                <br>
+                <div class="text-center">  <h3>COMUNÍCATE CON NOSOTROS </h3> </div>
+                <div class="text-center">  <h3>A TRAVÉS DE NUESTRO CHAT </h3> </div>
+                <br><br>
                <div class="btn-wrap">
                    <div class="text-center">  <a href="https://chat.integrally.com.co:8797/chat.html" class="btn btn-outline-warning">INGRESAR CHAT</a> </div>
               </div>
