--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
 </head>
 
 <body>
+  
+ <div class="btn-chat">
+<a href="https://chat.integrally.com.co:8797/chat.html" target="_blank">
+<img class="zoom" src="assets/img/chat-en-vivo.png" alt="" height="80">
+</a>
+</div>
 
   <!-- ======= Top Bar ======= -->
   <div id="topbar" class="d-none d-lg-flex align-items-center fixed-top ">
