--- a/contratacion.html
+++ b/contratacion.html
@@ -247,7 +247,7 @@
 
           <div class="col-lg-4 col-md-6 footer-newsletter">
             <h4>SESPEM</h4> 
-            <p>Su aliado estratégico con el que siempre podrás contar.</p>
+            <p>Su aliado estratégico con el que siempre podrá contar.</p>
             <form action="" method="post">
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
